LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/et2.tex
+++ b/et2.tex
@@ -1,4 +1,4 @@
-% Created 2023-06-16 Fri 19:49
+% Created 2023-06-17 Sat 14:44
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -372,8 +372,7 @@ public static class MessageDispatcherComponentHelper { // Awake() etc...
     }
 }
 \end{minted}
-
-\subsection{}
+\subsection{【不记得之前这里写的是什么了。。】}
 \label{sec-1-9}
 \begin{itemize}
 \item 前面大数是找的，框架中存在的网络处理相关的逻辑。
@@ -388,11 +387,10 @@ unit.ClientScene().GetComponent<SessionComponent>().Session.Send(msg);
 \begin{itemize}
 \item 【服务端】：MessageHelper 类，好像可以帮助发送不少消息到客户端，到其它服吗？这个发送消息的问题，可能就会连带Actor 相关模块，没弄懂的Rpc 进程间通信一起弄明白。
 \end{itemize}
-\subsection{：MessageHelper: 不知道这个类是作什么用的，使用场景等。过会儿看下}
+\subsection{MessageHelper: 不知道这个类是作什么用的，使用场景等。过会儿看下}
 \label{sec-1-10}
-\subsection{ActorHandleHelper:}
+\subsection{ActorHandleHelper: 是谁调用它，什么场景下使用的？}
 \label{sec-1-11}
-
 
 \section{IAwake 接口类系统，IStart 重构丢了}
 \label{sec-2}
