--- a/et2.org
+++ b/et2.org
@@ -322,8 +322,7 @@ public static class MessageDispatcherComponentHelper { // Awake() etc...
     }
 }
 #+END_SRC
-
-** 
+** 【不记得之前这里写的是什么了。。】
 - 前面大数是找的，框架中存在的网络处理相关的逻辑。
 - 现在就带问题：现存的编译错误，当客户端需要发送消息，或是某个服需要发送内网消息时，可以如何把消息把出去？
 - 带现存的编译问题，把这个发送消息相关的逻辑，分外网消息（自客户端发送）与内网消息（自某个服发送），弄明白。
@@ -333,13 +332,12 @@ clientScene.GetComponent<SessionComponent>().Session.Send(new C2M_Stop());
 unit.ClientScene().GetComponent<SessionComponent>().Session.Send(msg);
 #+END_SRC
 - 【服务端】：MessageHelper 类，好像可以帮助发送不少消息到客户端，到其它服吗？这个发送消息的问题，可能就会连带Actor 相关模块，没弄懂的Rpc 进程间通信一起弄明白。
-** ：MessageHelper: 不知道这个类是作什么用的，使用场景等。过会儿看下
+** MessageHelper: 不知道这个类是作什么用的，使用场景等。过会儿看下
 #+BEGIN_SRC csharp
 #+END_SRC
-** ActorHandleHelper: 
+** ActorHandleHelper: 是谁调用它，什么场景下使用的？
 #+BEGIN_SRC csharp
 #+END_SRC
-
 
 * IAwake 接口类系统，IStart 重构丢了
 - 感觉还比较直接，就是帮助搭建热更新域与Unity 常规工程域生命周期回调的桥，搭桥连线，连能就可以了。应该可以扩散出个IStart 接口类
