--- a/et3.tex
+++ b/et3.tex
@@ -1,4 +1,4 @@
-% Created 2023-06-16 Fri 19:50
+% Created 2023-06-17 Sat 14:44
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -560,6 +560,7 @@ public enum MailboxType {
 \item 读上下面的顶层的 NetInnerComponentOnReadEvent.cs 的顶层某个某些服，读到消息后的消息处理逻辑
 \item 知道，当前帮助类，就是衔接上面的两条顶层调用，与底层具体处理逻辑的桥，把框架上中下层连接连通起来。
 \item 分析这个类，应该可以理解底层不同逻辑方法的前后调用关系，消息处理的逻辑模块先后顺序，以及必要的可能的调用频率，或调用上下文情境等。明天上午再看一下
+\item 上面 \textbf{【ActorMessageSenderComponentSystem.cs】的使用情境} ：有个 \textbf{【服务端热更新的帮助】类MessageHelper.cs}, 发Actor 消息，与ActorLocation 位置消息，也会都是调用 ActorMessageSenderComponentSystem.cs 里定义的底层逻辑。 
 \begin{minted}[fontsize=\scriptsize,linenos=false]{csharp}
 public static class ActorHandleHelper {
     public static void Reply(int fromProcess, IActorResponse response) {
@@ -1379,7 +1380,8 @@ public class NetServerComponent: Entity, IAwake<IPEndPoint>, IDestroy {
 \section{Unit: 这个模块还不太懂，需要明天上午花时间再看一下}
 \label{sec-7}
 \begin{itemize}
-\item 有个编译错误说：这个组件不可以同时成分多于一个不同组件组成元件。。。可是框架中使用的地方，明明把它添加进了不同的组件。去弄明白框架里，如果控件一个组件只能成为一个【不能多于1 个】组件的组成部分的？
+\item 【Unit】究竟是什么：感觉像是视图里的控件的基本单位？它带位置、旋转信息
+\item 有个编译错误说：这个组件不可以同时成分多于一个不同组件组成元件。。。可是框架中使用的地方，明明把它添加进了不同的组件。去弄明白框架里，如何控件一个组件只能成为一个【不能多于1 个】组件的组成部分的？
 \end{itemize}
 \subsection{UnitGateComponent:}
 \label{sec-7-1}
